inc/proxmox-ovh-iptables.save
# Generated by iptables-save v1.4.14 on Fri Jul 11 22:23:35 2014
*nat
:PREROUTING ACCEPT [3734:250815]
:POSTROUTING ACCEPT [2133:206882]
:OUTPUT ACCEPT [2133:206882]
-A PREROUTING -i vmbr0 -p tcp -m tcp --dport 2222 -j DNAT --to-destination 10.21.21.5:22
-A POSTROUTING -s 10.21.21.0/24 -o vmbr0 -j MASQUERADE
COMMIT
# Completed on Fri Jul 11 22:23:35 2014
# Generated by iptables-save v1.4.14 on Fri Jul 11 22:23:35 2014
*mangle
:PREROUTING ACCEPT [8539403:18931399610]
:INPUT ACCEPT [8504986:18928398607]
:FORWARD ACCEPT [33643:2901140]
:OUTPUT ACCEPT [3479760:257803437]
:POSTROUTING ACCEPT [3513403:260704577]
COMMIT
# Completed on Fri Jul 11 22:23:35 2014
# Generated by iptables-save v1.4.14 on Fri Jul 11 22:23:35 2014
*filter
:INPUT DROP [37:2255]
:FORWARD ACCEPT [2807:239108]
:OUTPUT ACCEPT [163:30219]
-A INPUT  -m state --state ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -s 83.162.250.46/32 -j ACCEPT
-A INPUT -s 83.162.250.46/32 -j ACCEPT
-A INPUT -s 79.170.89.32/27 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Fri Jul 11 22:23:35 2014
